<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ekf_filter</name>
  <version>0.1.0</version>
  <description>
    ekf_filter package
  </description>
  <maintainer email="isaac-sim-maintainers@nvidia.com">Isaac Sim</maintainer>
  <license>Copyright (c) 2024, NVIDIA CORPORATION. All rights reserved.
    NVIDIA CORPORATION and its licensors retain all intellectual property
    and proprietary rights in and to this software, related documentation
    and any modifications thereto.  Any use, reproduction, disclosure or
    distribution of this software and related documentation without an express
    license agreement from NVIDIA CORPORATION is strictly prohibited.</license>
  
  <url type="Documentation">https://docs.omniverse.nvidia.com/app_isaacsim/app_isaacsim/overview.html</url>
  <url type="Forums">https://forums.developer.nvidia.com/c/omniverse/simulation/69</url>

  <depend>rclpy</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rqt_image_view</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>serial</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
